--- a/Skyline_Form/TODO.txt
+++ b/Skyline_Form/TODO.txt
@@ -1,1 +1,1 @@
-JSP LAYOUT נפרדALL ELEMENTSDATA TABLE ADAMA DELETIONUNITESTft_PֹUSERשיפור UIPOSTGREdoc attachmentsdata flowJOBS + night job----- INSERT INTO fg_resourceSELECT * FROM SKYLINE_ADAMA_COMP.fg_resource TWHERE UPPER(T.VALUE) IN (SELECT USER_VIEWS.VIEW_NAME FROM USER_VIEWS)AND UPPER(T.VALUE) NOT IN (SELECT VALUE FROM fg_resource);insert into fg_formselect * from skyline_adama_comp.fg_form where formcode = 'ColumnsDefinition';insert into fg_formentityselect * from skyline_adama_comp.fg_formentity where formcode = 'ColumnsDefinition';-------
+JSP LAYOUT נפרדALL ELEMENTSDATA TABLE ADAMA DELETIONUNITESTft_PֹUSERשיפור UIPOSTGREdoc attachmentsdata flowJOBS + night job-- from builder clean : 2 delete def----- INSERT INTO fg_resourceSELECT * FROM SKYLINE_ADAMA_COMP.fg_resource TWHERE UPPER(T.VALUE) IN (SELECT USER_VIEWS.VIEW_NAME FROM USER_VIEWS)AND UPPER(T.VALUE) NOT IN (SELECT VALUE FROM fg_resource);insert into fg_formselect * from skyline_adama_comp.fg_form where formcode = 'ColumnsDefinition';insert into fg_formentityselect * from skyline_adama_comp.fg_formentity where formcode = 'ColumnsDefinition';-------select * from FG_RESOURCE t where t.type ='CATALOG_ORACLE_TABLE'and upper(t.value) not in (select upper(ut.TABLE_NAME) from user_tables ut union all select upper(uv.VIEW_NAME) from user_views uv ); 
